syntax = "proto3";

package user;

option go_package = "./";

service UserService {
  rpc GetUserInfo (GetUserInfoRequest) returns (GetUserInfoResponse);
}

message GetUserInfoRequest {
  int32 user_id = 1;
}

message GetUserInfoResponse {
  int32 user_id = 1;
  string name = 2;
  string email = 3;
  string location = 4;
}
